--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sourcemap-view",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "View the original code from the sourcemap based on the error lineno and colno.",
   "main": "dist/sourcemap-view.js",
   "module": "dist/sourcemap-view.es.js",
@@ -9,7 +9,7 @@
     "lint": "eslint src/**.ts",
     "test": "node __tests__",
     "pretest": "npm run build",
-    "prepublish": "npm test"
+    "prepublishOnly": "npm test"
   },
   "repository": {
     "type": "git",
