--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sourcemap-view",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "View the original code from the sourcemap based on the error lineno and colno.",
   "main": "dist/sourcemap-view.js",
   "module": "dist/sourcemap-view.es.js",
@@ -42,5 +42,9 @@
     "rollup-plugin-typescript": "^1.0.1",
     "tslib": "^2.0.0",
     "typescript": "^3.9.6"
+  },
+  "engines": {
+    "node": ">= 12.16.0",
+    "npm": ">= 6.14.0"
   }
 }
